--- a/ABP_BookStore_Volo/aspnet-core/src/Acme.BookStore.Domain.Shared/Localization/BookStore/en.json
+++ b/ABP_BookStore_Volo/aspnet-core/src/Acme.BookStore.Domain.Shared/Localization/BookStore/en.json
@@ -5,11 +5,13 @@
     "Welcome": "Welcome",
     "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information, visit abp.io.",
     "Menu:BookStore": "Book Store",
-    "Menu:Books": "Books",
     "Actions": "Actions",
     "Close": "Close",
     "Delete": "Delete",
     "Edit": "Edit",
+
+    //Class: Book
+    "Menu:Books": "Books",
     "PublishDate": "Publish date",
     "NewBook": "New book",
     "Name": "Name",
@@ -19,12 +21,28 @@
     "AreYouSure": "Are you sure?",
     "AreYouSureToDelete": "Are you sure you want to delete this item?",
 
+    //Class: Author
     "Menu:Authors": "Authors",
     "Authors": "Authors",
     "AuthorDeletionConfirmationMessage": "Are you sure to delete the author '{0}'?",
     "BirthDate": "Birth date",
     "NewAuthor": "New author",
 
+    //Class: UserInfo
+    "Menu:UserInfos": "Users Information",
+    "UserInfos": "Users Information",
+    "UserInfoDeletionConfirmationMessage": "Are you sure to delete the user information '{0}'?",
+    "UserName": "User Name",
+    "FirstName": "First Name",
+    "LastName": "Last Name",
+    "JobType": "Job Type",
+    "Avatar": "Avatar",
+    "DOB": "Birth date",
+    "Address": "Address",
+    "EmailAddress": "Email",
+    "NewUserInfo": "New user information",
+
+    //Enum Type
     "Enum:BookType.0": "Undefined",
     "Enum:BookType.1": "Adventure",
     "Enum:BookType.2": "Biography",
@@ -35,17 +53,32 @@
     "Enum:BookType.7": "Science fiction",
     "Enum:BookType.8": "Poetry",
 
+    "Enum:JobType.0": "None",
+    "Enum:JobType.1": "Teacher",
+    "Enum:JobType.2": "Student",
+    "Enum:JobType.3": "Developer",
+
+    //Permission
     "Permission:BookStore": "Book Store",
     "Permission:Books": "Book Management",
     "Permission:Books.Create": "Creating new books",
     "Permission:Books.Edit": "Editing the books",
     "Permission:Books.Delete": "Deleting the books",
+
     "Permission:Authors": "Author Management",
     "Permission:Authors.Create": "Creating new authors",
     "Permission:Authors.Edit": "Editing the authors",
     "Permission:Authors.Delete": "Deleting the authors",
 
-    "BookStore:00001": "There is already an author with the same name: {name}"
+    "Permission:UserInfos": "Author Management",
+    "Permission:UserInfos.Create": "Creating new UserInfos",
+    "Permission:UserInfos.Edit": "Editing the UserInfos",
+    "Permission:UserInfos.Delete": "Deleting the UserInfos",
 
+    //Exception Message
+    "BookStore:00001": "There is already an author with the same name: {name}",
+    "BookStore:00002": "There is already an User Info with the same full name: {fullName}",
+    "BookStore:00003": "Cannot found any User with ID: {userId}",
+    "BookStore:00004": "User '{username}' have already had their information!"
   }
 }
